--- a/AquariumSite/build.gradle
+++ b/AquariumSite/build.gradle
@@ -15,7 +15,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-web'	
+	implementation project (':JPAAquariumSite')
 	implementation 'javax.servlet:jstl:1.2'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	runtimeOnly 'mysql:mysql-connector-java'
